validar sala agendada por data/hora
